--- a/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_deployments.yaml
+++ b/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_deployments.yaml
@@ -66,7 +66,7 @@ spec:
                         - level
                         type: object
                       resources:
-                        description: ResourceRequirements contain information for mem/cpu requirements
+                        description: ResourceRequirements describes the compute resource requirements.
                         nullable: true
                         properties:
                           limits:
@@ -76,8 +76,7 @@ spec:
                               - type: string
                               pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                               x-kubernetes-int-or-string: true
-                            description: ResourceList is a set of (resource name, quantity) pairs.
-                            nullable: true
+                            description: 'Limits describes the maximum amount of compute resources allowed. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
                             type: object
                           requests:
                             additionalProperties:
@@ -86,8 +85,7 @@ spec:
                               - type: string
                               pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                               x-kubernetes-int-or-string: true
-                            description: ResourceList is a set of (resource name, quantity) pairs.
-                            nullable: true
+                            description: 'Requests describes the minimum amount of compute resources required. If Requests is omitted for a container, it defaults to Limits if that is explicitly specified, otherwise to an implementation-defined value. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
                             type: object
                         type: object
                       sidecars:
@@ -107,6 +105,7 @@ spec:
                               type: object
                             resources:
                               description: ResourceRequirements contain information for mem/cpu requirements
+                              nullable: true
                               properties:
                                 limits:
                                   additionalProperties:
@@ -279,6 +278,7 @@ spec:
                               type: object
                             resources:
                               description: ResourceRequirements contain information for mem/cpu requirements
+                              nullable: true
                               properties:
                                 limits:
                                   additionalProperties:
