--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
     - name: Check out code
       uses: actions/checkout@v2
+      with:
+        fetch-depth: "0"
 
     - name: Prepare Golang 
       uses: actions/setup-go@v2
@@ -50,9 +52,21 @@ jobs:
     - name: Lint code
       run: GOGC=300 make lint-code
 
-    - name: Lint charts
-      run: make lint-charts
-      
+    - name: Set up Helm
+      uses: azure/setup-helm@v1
+      with:
+        version: v3.4.0
+
+    - uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+
+    - name: Set up chart-testing
+      uses: helm/chart-testing-action@v2.1.0
+
+    - name: Run chart-testing (lint)
+      run: ct lint --config chart-linter.yaml
+
     - name: Build binary
       run: |
         make manager
