--- a/charts/csi-baremetal-deployment/templates/csi-baremetal_v1_deployment.yaml
+++ b/charts/csi-baremetal-deployment/templates/csi-baremetal_v1_deployment.yaml
@@ -13,6 +13,9 @@ spec:
   registrySecret: {{ .Values.global.registrySecret }}
   pullPolicy: {{ .Values.image.pullPolicy }}
   nodeIDAnnotation: {{ .Values.feature.usenodeannotation }}
+  selector:
+    matchLabels:
+    - csi-baremetal
   {{- if and (.Values.nodeSelector.key) (.Values.nodeSelector.value)}}
   nodeSelector:
     key: {{.Values.nodeSelector.key}}
