[ISSUE-591] Remove required field scheduler.patcher.enabled Add selector field selector

--- a/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_deployments.yaml
+++ b/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_deployments.yaml
@@ -311,14 +311,20 @@ spec:
                         type: integer
                       restoreOnShutdown:
                         type: boolean
-                    required:
-                    - enable
                     type: object
                   storageProvisioner:
                     type: string
                 required:
                 - enable
                 - storageProvisioner
+                type: object
+              selector:
+                description: Selector ...
+                properties:
+                  matchLabels:
+                    items:
+                      type: string
+                    type: array
                 type: object
               sequentialLVGReservation:
                 type: boolean
