--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -50,6 +50,9 @@ jobs:
     - name: Lint code
       run: GOGC=300 make lint-code
 
+    - name: Lint chart
+      run: make lint-operator-chart
+
     - name: Build binary
       run: |
         make manager
