--- a/charts/csi-baremetal-deployment/templates/csi-baremetal_v1_deployment.yaml
+++ b/charts/csi-baremetal-deployment/templates/csi-baremetal_v1_deployment.yaml
@@ -27,7 +27,7 @@ spec:
       image:
         name: csi-baremetal-controller
         tag: {{ .Values.driver.controller.image.tag | default .Values.image.tag }}
-      resources: {{- toYaml .Values.driver.controller.resources | nindent 8}}
+      {{- include "setResources" .Values.driver.controller | nindent 6 }}
       log:
         format: {{ .Values.driver.log.format }}
         level: {{ .Values.driver.log.level }}
@@ -36,33 +36,28 @@ spec:
           image:
             name: livenessprobe
             tag: {{ .Values.driver.livenessProbe.image.tag }}
-          resources:
-            {{- include "setResources" .Values.driver.livenessProbe | nindent 12 }}
+          {{- include "setResources" .Values.driver.livenessProbe | nindent 10 }}
         csi-provisioner:
           image:
             name: csi-provisioner
             tag: {{ .Values.driver.provisioner.image.tag }}
-          resources:
-            {{- include "setResources" .Values.driver.provisioner | nindent 12 }}
+          {{- include "setResources" .Values.driver.provisioner | nindent 10 }}
         csi-resizer:
           image:
             name: csi-resizer
             tag: {{ .Values.driver.resizer.image.tag }}
-          resources:
-            {{- include "setResources" .Values.driver.resizer | nindent 12 }}
+          {{- include "setResources" .Values.driver.resizer | nindent 10 }}
     node:
       driveMgr:
         image:
           name: csi-baremetal-{{ .Values.driver.drivemgr.type }}
           tag: {{ .Values.driver.drivemgr.image.tag | default .Values.image.tag }}
-        resources:
-          {{- include "setResources" .Values.driver.drivemgr | nindent 10 }}
+        {{- include "setResources" .Values.driver.drivemgr | nindent 8 }}
         endpoint: {{ .Values.driver.drivemgr.grpc.server.endpoint }}
       image:
         name: csi-baremetal-node
         tag: {{ .Values.driver.node.image.tag | default .Values.image.tag }}
-      resources:
-        {{- include "setResources" .Values.driver.node | nindent 8 }}
+      {{- include "setResources" .Values.driver.node | nindent 6 }}
       log:
         format: {{ .Values.driver.log.format }}
         level: {{ .Values.driver.log.level }}
@@ -71,14 +66,12 @@ spec:
           image:
             name: csi-node-driver-registrar
             tag: {{ .Values.driver.nodeDriverRegistrar.image.tag }}
-          resources:
-            {{- include "setResources" .Values.driver.nodeDriverRegistrar | nindent 12 }}
+          {{- include "setResources" .Values.driver.nodeDriverRegistrar | nindent 10 }}
         livenessprobe:
           image:
             name: livenessprobe
             tag: {{ .Values.driver.livenessProbe.image.tag }}
-          resources:
-            {{- include "setResources" .Values.driver.livenessProbe | nindent 12 }}
+          {{- include "setResources" .Values.driver.livenessProbe | nindent 10 }}
     metrics:
       path: {{ .Values.driver.metrics.path }}
       port: {{ .Values.driver.metrics.port }}
@@ -92,8 +85,7 @@ spec:
     image:
       name: csi-baremetal-scheduler-extender
       tag: {{ .Values.scheduler.image.tag | default .Values.image.tag }}
-    resources:
-      {{- include "setResources" .Values.scheduler | nindent 6 }}
+    {{- include "setResources" .Values.scheduler | nindent 4 }}
     log:
       format: {{ .Values.scheduler.log.format }}
       level: {{ .Values.scheduler.log.level }}
@@ -106,8 +98,7 @@ spec:
       image:
         name: csi-baremetal-scheduler-patcher
         tag: {{ .Values.scheduler.patcher.image.tag | default .Values.image.tag }}
-      resources:
-        {{- include "setResources" .Values.scheduler.patcher | nindent 8 }}
+      {{- include "setResources" .Values.scheduler.patcher | nindent 6 }}
       interval: {{ .Values.scheduler.patcher.interval }}
       restoreOnShutdown: {{ .Values.scheduler.patcher.restore_on_shutdown }}
       configMapName: {{ .Values.scheduler.patcher.config_map_name }}
@@ -118,8 +109,7 @@ spec:
     image:
       name: csi-baremetal-node-controller
       tag: {{ .Values.nodeController.image.tag | default .Values.image.tag }}
-    resources:
-      {{- include "setResources" .Values.nodeController | nindent 6 }}
+    {{- include "setResources" .Values.nodeController | nindent 4 }}
     log:
       format: {{ .Values.nodeController.log.format }}
       level: {{ .Values.nodeController.log.level }}
